feat: added devcontainers integration

--- a/frameworks/common-files/README.md.tmpl
+++ b/frameworks/common-files/README.md.tmpl
@@ -8,3 +8,5 @@
 {{if .IsGrpcServer }}
 ### gRPC Server
 {{end}}
+
+[![Open in DevPod!](https://devpod.sh/assets/open-in-devpod.svg)](https://devpod.sh/open#https://github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}})
