fix: client name and removed unwanted fmt

--- a/frameworks/go-gin-server/pkg/rest/client/client.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/client/client.go.tmpl
@@ -5,7 +5,7 @@ import (
 	"net/http"
 )
 
-func Execute() ([]byte, error) {
+func Execute{{.RestClientSourceNodeID}}() ([]byte, error) {
 	response, err := http.Get("{{.RestClientServiceName}}:{{.RestClientPort}}/ping")
 
 	if err != nil {
