--- a/frameworks/common-files/useful-commands.tmpl
+++ b/frameworks/common-files/useful-commands.tmpl
@@ -6,59 +6,61 @@
     go install github.com/fullstorydev/grpcurl/cmd/grpcurl
 
 # To check the services available
-    grpcurl -plaintext localhost:50051 list
+    grpcurl -plaintext localhost:{{.GrpcServerPort}} list
 
 # To check the rpc's available inside a specific service
-    grpcurl -plaintext localhost:50051 list pb.BasicService
-    # grpcurl -plaintext localhost:50051 list serviceName
+    grpcurl -plaintext localhost:{{.GrpcServerPort}} list pb.BasicService
+    # grpcurl -plaintext localhost:{{.GrpcServerPort}} list serviceName
 
 # To run a method from a service
-    grpcurl -plaintext localhost:50051 pb.BasicService/Create
-    # grpcurl -plaintext localhost:50051 serviceName/MethodName
+    grpcurl -plaintext localhost:{{.GrpcServerPort}} pb.BasicService/Create
+    # grpcurl -plaintext localhost:{{.GrpcServerPort}} serviceName/MethodName
 
 # To describe any service
-    grpcurl -plaintext -msg-template localhost:50051 describe pb.BasicService
-    # grpcurl -plaintext -msg-template localhost:50051 describe serviceName
+    grpcurl -plaintext -msg-template localhost:{{.GrpcServerPort}} describe pb.BasicService
+    # grpcurl -plaintext -msg-template localhost:{{.GrpcServerPort}} describe serviceName
 
 # To describe any method
-    grpcurl -plaintext -msg-template localhost:50051 describe pb.BasicService.Get
-    # grpcurl -plaintext -msg-template localhost:50051 describe serviceName.MethodName
+    grpcurl -plaintext -msg-template localhost:{{.GrpcServerPort}} describe pb.BasicService.Get
+    # grpcurl -plaintext -msg-template localhost:{{.GrpcServerPort}} describe serviceName.MethodName
 
 # To describe any Message
-    grpcurl -plaintext -msg-template localhost:50051 describe pb.MessageRequest
-    # grpcurl -plaintext -msg-template localhost:50051 describe MessageName
-
+    grpcurl -plaintext -msg-template localhost:{{.GrpcServerPort}} describe pb.MessageRequest
+    # grpcurl -plaintext -msg-template localhost:{{.GrpcServerPort}} describe MessageName
 {{end}}
 
 {{if .IsRestServer }}
-# Curl commands for REST Server
-# sample Post curl command
+    {{range $i, $v := .RestResources}}
+# Curl commands for REST Server resource {{$v.CapsResourceNameSingular}}
+# Post
 curl -X POST -H "Content-Type: application/json" \
--d '{"id":"123","name": "John", "city": "Pune"}' \
-http://localhost:8080/v1/users
+-d '{{$v.ResourcePostBody}}' \
+http://localhost:{{$.RestServerPort}}/v1/{{$v.SmallResourceNamePlural}}
 
-# sample Get curl command
+# Get
 curl -X GET -H "Content-Type: application/json" \
-http://localhost:8080/v1/users
+http://localhost:{{$.RestServerPort}}/v1/{{$v.SmallResourceNamePlural}}
 
-# sample Put curl command
+# Put
 curl -X PUT -H "Content-Type: application/json" \
--d '{"id":"123","name": "John", "city": "Pune"}' \
-http://localhost:8080/v1/users/123
+-d '{{$v.ResourcePutBody}}' \
+http://localhost:{{$.RestServerPort}}/v1/{{$v.SmallResourceNamePlural}}/123
 
-# sample Put curl command
+# Put
 ### wrong id passed in param
 curl -X PUT -H "Content-Type: application/json" \
--d '{"id":"123","name": "John", "city": "Pune"}' \
-http://localhost:8080/v1/users/1234
+-d '{{$v.ResourcePutBody}}' \
+http://localhost:{{$.RestServerPort}}/v1/{{$v.SmallResourceNamePlural}}/1234
 
-# sample Get curl command (retrieve specific user)
+# Get  (retrieve specific {{$v.CapsResourceNameSingular}})
 curl -X GET -H "Content-Type: application/json" \
-http://localhost:8080/v1/users/123
+http://localhost:{{$.RestServerPort}}/v1/{{$v.SmallResourceNamePlural}}/123
 
-# sample Delete curl command
+# Delete
 curl -X DELETE -H "Content-Type: application/json" \
-http://localhost:8080/v1/users/123
+http://localhost:{{$.RestServerPort}}/v1/{{$v.SmallResourceNamePlural}}/123
+
+    {{end}}
 
 # when mysql throws error about server connection, fire below commands
 # CREATE USER 'root'@'%' IDENTIFIED BY 'password';
