--- a/frameworks/common-files/go.mod.tmpl
+++ b/frameworks/common-files/go.mod.tmpl
@@ -15,8 +15,8 @@ require (
 	go.opentelemetry.io/otel/exporters/otlp/otlptrace v1.16.0
 	go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc v1.16.0
 	go.opentelemetry.io/otel/sdk v1.16.0
-    google.golang.org/grpc v1.55.0
-    github.com/golang/protobuf v1.5.3
+    google.golang.org/grpc v1.56.0
+    google.golang.org/protobuf v1.30.0
     github.com/mattn/go-sqlite3 v1.14.16
     google.golang.org/protobuf v1.30.0
 {{else if .IsRestServer }}
@@ -31,12 +31,12 @@ require (
 	go.opentelemetry.io/otel/exporters/otlp/otlptrace v1.16.0
 	go.opentelemetry.io/otel/exporters/otlp/otlptrace/otlptracegrpc v1.16.0
 	go.opentelemetry.io/otel/sdk v1.16.0
-    google.golang.org/grpc  v1.55.0
+    google.golang.org/grpc v1.56.0
 {{else if .IsGrpcServer }}
 	github.com/go-sql-driver/mysql v1.7.1
     github.com/mattn/go-sqlite3 v1.14.16
     github.com/sirupsen/logrus v1.9.0
-    google.golang.org/grpc v1.55.0
+    google.golang.org/grpc v1.56.0
     google.golang.org/protobuf v1.30.0
 {{end}}
 )
