fix: go mod needed for new dependencies

--- a/.github/workflows/ci.yml.tmpl
+++ b/.github/workflows/ci.yml.tmpl
@@ -33,6 +33,7 @@ jobs:
       - name: Build
         run: |
           cd [[.NodeName]]
+          go mod tidy
           go build -v ./...
           cd ..
       - name: golangci-lint
