fix: issues in sqlite and added tag for docker image

--- a/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite-client.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/clients/sqls/sqlite-client.go.tmpl
@@ -6,7 +6,7 @@ import (
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/sqls"
 
-	"github.com/mattn/go-sqlite3"
+	//"github.com/mattn/go-sqlite3"
 )
 
 func Migrate(r *sqls.SQLiteClient) error {
@@ -27,12 +27,12 @@ func Create(r *sqls.SQLiteClient, m models.{{.CapsResourceNameSingular}}) (*mode
 	insertQuery := "INSERT INTO {{.SmallResourceNamePlural}}({{.InsertQueryColumns}})values({{.InsertQueryParams}})"
 	res, err := r.DB.Exec(insertQuery, {{.InsertQueryExecColumns}})
 	if err != nil {
-		var sqliteErr sqlite3.Error
-		if errors.As(err, &sqliteErr) {
-			if errors.Is(sqliteErr.ExtendedCode, sqlite3.ErrConstraintUnique) {
-				return nil, sqls.ErrDuplicate
-			}
-		}
+		//var sqliteErr sqlite3.Error
+		//if errors.As(err, &sqliteErr) {
+		//	if errors.Is(sqliteErr.ExtendedCode, sqlite3.ErrConstraintUnique) {
+		//		return nil, sqls.ErrDuplicate
+		//	}
+		//}
 		return nil, err
 	}
 
