--- a/Dockerfile.tmpl
+++ b/Dockerfile.tmpl
@@ -10,7 +10,7 @@ WORKDIR /app
 COPY . .
 
 # Build application
-RUN go build -ldflags '-s -w' -o main .
+RUN go mod tidy && go build -ldflags '-s -w' -o main .
 
 # Container start command for development
 CMD ["go", "run", "main.go"]
@@ -19,7 +19,7 @@ CMD ["go", "run", "main.go"]
 ################ Production ################
 # Creates a minimal image for production using distroless base image
 # More info here: https://github.com/GoogleContainerTools/distroless
-FROM gcr.io/distroless/base-debian10 as production
+FROM gcr.io/distroless/base-debian11:nonroot as production
 
 # Copy application binary from build/dev stage to the distroless container
 COPY --from=build /app/main /
