--- a/frameworks/go-grpc-server/pkg/grpc/server/controllers/controller.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/controllers/controller.go.tmpl
@@ -8,23 +8,29 @@ import (
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
 )
 
-var {{.SmallResourceNameSingular}}Service = services.New{{.CapsResourceNameSingular}}Service()
-
 type {{.CapsResourceNameSingular}}Server struct {
+	{{.SmallResourceNameSingular}}Service *services.{{.CapsResourceNameSingular}}Service
 	pb.Unimplemented{{.CapsResourceNameSingular}}ServiceServer
 }
 
-func New{{.CapsResourceNameSingular}}Server() *{{.CapsResourceNameSingular}}Server {
-	return &{{.CapsResourceNameSingular}}Server{}
+
+func New{{.CapsResourceNameSingular}}Server() (*{{.CapsResourceNameSingular}}Server, error) {
+	{{.SmallResourceNameSingular}}Service, err := services.New{{.CapsResourceNameSingular}}Service()
+	if err != nil {
+		return nil, err
+	}
+	return &{{.CapsResourceNameSingular}}Server{
+		{{.SmallResourceNameSingular}}Service: {{.SmallResourceNameSingular}}Service,
+	}, nil
 }
 
-func (s *{{.CapsResourceNameSingular}}Server) Ping(_ context.Context, _ *pb.{{.CapsResourceNameSingular}}Request) (*pb.{{.CapsResourceNameSingular}}Response, error) {
+func (*{{.CapsResourceNameSingular}}Server) Ping(_ context.Context, _ *pb.{{.CapsResourceNameSingular}}Request) (*pb.{{.CapsResourceNameSingular}}Response, error) {
 	return &pb.{{.CapsResourceNameSingular}}Response{
 		Message: "Server is healthy and working!",
 	}, nil
 }
 
-func (s *{{.CapsResourceNameSingular}}Server) Create{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Create{{.CapsResourceNameSingular}}Request) (*pb.Create{{.CapsResourceNameSingular}}Response, error) {
+func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Create{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Create{{.CapsResourceNameSingular}}Request) (*pb.Create{{.CapsResourceNameSingular}}Response, error) {
 	{{.SmallResourceNameSingular}} := models.{{.CapsResourceNameSingular}}{
         {{range $k, $v := .Fields}}
             {{if eq $k "Id"}}
@@ -34,7 +40,7 @@ func (s *{{.CapsResourceNameSingular}}Server) Create{{.CapsResourceNameSingular}
         {{end}}
 	}
 
-	if err := {{.SmallResourceNameSingular}}Service.Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}}); err != nil {
+	if err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}}); err != nil {
 		return nil, err
 	}
 
@@ -44,9 +50,9 @@ func (s *{{.CapsResourceNameSingular}}Server) Create{{.CapsResourceNameSingular}
 }
 
 
-func (s *{{.CapsResourceNameSingular}}Server) Get{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Get{{.CapsResourceNameSingular}}Request) (*pb.Get{{.CapsResourceNameSingular}}Response, error) {
+func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Get{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Get{{.CapsResourceNameSingular}}Request) (*pb.Get{{.CapsResourceNameSingular}}Response, error) {
     id := req.GetId()
-	retrieved{{.CapsResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(id)
+	retrieved{{.CapsResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.Get{{.CapsResourceNameSingular}}(id)
 
 	if err != nil {
 		return nil, err
@@ -67,8 +73,8 @@ func (s *{{.CapsResourceNameSingular}}Server) Get{{.CapsResourceNameSingular}}(_
 	}, nil
 }
 
-func (s *{{.CapsResourceNameSingular}}Server) List{{.CapsResourceNamePlural}}(_ context.Context, _ *pb.List{{.CapsResourceNamePlural}}Request) (*pb.List{{.CapsResourceNamePlural}}Response, error) {
-	{{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Service.List{{.CapsResourceNamePlural}}()
+func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) List{{.CapsResourceNamePlural}}(_ context.Context, _ *pb.List{{.CapsResourceNamePlural}}Request) (*pb.List{{.CapsResourceNamePlural}}Response, error) {
+	{{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.List{{.CapsResourceNamePlural}}()
 
 	if err != nil {
 		return nil, err
@@ -93,7 +99,7 @@ func (s *{{.CapsResourceNameSingular}}Server) List{{.CapsResourceNamePlural}}(_ 
 	}, nil
 }
 
-func (s *{{.CapsResourceNameSingular}}Server) Update{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Update{{.CapsResourceNameSingular}}Request) (*pb.Update{{.CapsResourceNameSingular}}Response, error) {
+func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Update{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Update{{.CapsResourceNameSingular}}Request) (*pb.Update{{.CapsResourceNameSingular}}Response, error) {
 	id := req.GetId()
 
 	{{.SmallResourceNameSingular}}Request := models.{{.CapsResourceNameSingular}}{
@@ -105,7 +111,7 @@ func (s *{{.CapsResourceNameSingular}}Server) Update{{.CapsResourceNameSingular}
             {{end}}
         {{end}}
 	}
-	err := {{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(id, {{.SmallResourceNameSingular}}Request)
+	err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.Update{{.CapsResourceNameSingular}}(id, {{.SmallResourceNameSingular}}Request)
 
 	if err != nil {
 		return nil, err
@@ -116,9 +122,9 @@ func (s *{{.CapsResourceNameSingular}}Server) Update{{.CapsResourceNameSingular}
 	}, nil
 }
 
-func (s *{{.CapsResourceNameSingular}}Server) Delete{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Delete{{.CapsResourceNameSingular}}Request) (*pb.Delete{{.CapsResourceNameSingular}}Response, error) {
+func ({{.SmallResourceNameSingular}}Server *{{.CapsResourceNameSingular}}Server) Delete{{.CapsResourceNameSingular}}(_ context.Context, req *pb.Delete{{.CapsResourceNameSingular}}Request) (*pb.Delete{{.CapsResourceNameSingular}}Response, error) {
 	id := req.GetId()
-	err := {{.SmallResourceNameSingular}}Service.Delete{{.CapsResourceNameSingular}}(id)
+	err := {{.SmallResourceNameSingular}}Server.{{.SmallResourceNameSingular}}Service.Delete{{.CapsResourceNameSingular}}(id)
 
 	if err != nil {
 		return nil, err
