--- a/frameworks/go-grpc-server/pkg/grpc/server/services/service.go.tmpl
+++ b/frameworks/go-grpc-server/pkg/grpc/server/services/service.go.tmpl
@@ -3,22 +3,20 @@ package services
 import (
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/daos"
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/grpc/server/models"
-    log "github.com/sirupsen/logrus"
 )
 
 type {{.CapsResourceNameSingular}}Service struct {
 	{{.SmallResourceNameSingular}}Dao *daos.{{.CapsResourceNameSingular}}Dao
 }
 
-func New{{.CapsResourceNameSingular}}Service() *{{.CapsResourceNameSingular}}Service {
+func New{{.CapsResourceNameSingular}}Service() (*{{.CapsResourceNameSingular}}Service, error) {
 	{{.SmallResourceNameSingular}}Dao, err := daos.New{{.CapsResourceNameSingular}}Dao()
 	if err != nil {
-		log.Fatal(err)
-		return nil
+		return nil, err
 	}
 	return &{{.CapsResourceNameSingular}}Service{
 		{{.SmallResourceNameSingular}}Dao: {{.SmallResourceNameSingular}}Dao,
-	}
+	}, nil
 }
 
 func ({{.SmallResourceNameSingular}}Service *{{.CapsResourceNameSingular}}Service) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
