--- a/frameworks/go-gin-server/pkg/rest/server/controllers/controller.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/controllers/controller.go.tmpl
@@ -119,18 +119,19 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 	context.JSON(http.StatusOK, {{.SmallResourceNamePlural}})
 }
 
-func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Patch{{.CapsResourceNameSingular}}(context *gin.Context) {
+func (*{{.CapsResourceNameSingular}}Controller) Patch{{.CapsResourceNameSingular}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "PATCH",
 	})
 }
-func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Options{{.CapsResourceNameSingular}}(context *gin.Context) {
+
+func (*{{.CapsResourceNameSingular}}Controller) Options{{.CapsResourceNameSingular}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "OPTIONS",
 	})
 }
 
-func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Head{{.CapsResourceNameSingular}}(context *gin.Context) {
+func (*{{.CapsResourceNameSingular}}Controller) Head{{.CapsResourceNameSingular}}(context *gin.Context) {
 	context.JSON(http.StatusOK, gin.H{
 		"message": "HEAD",
 	})
