--- a/frameworks/go-gin-server/pkg/rest/server/controllers/controller.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/controllers/controller.go.tmpl
@@ -68,7 +68,7 @@ func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Con
 	context.JSON(http.StatusOK, gin.H{"message": "{{.CapsResourceNameSingular}} updated successfully"})
 }
 
-func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Get{{.CapsResourceNameSingular}}(context *gin.Context) {
+func ({{.SmallResourceNameSingular}}Controller *{{.CapsResourceNameSingular}}Controller) Fetch{{.CapsResourceNameSingular}}(context *gin.Context) {
 	id, err := strconv.ParseInt(context.Param("id"), 10, 64)
 	if err != nil {
 		log.Error(err)
