--- a/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
@@ -17,7 +17,7 @@ func New{{.CapsResourceNameSingular}}Dao() (*{{.CapsResourceNameSingular}}Dao, e
 	if err != nil {
 		return nil, err
 	}
-	err = {{.SmallResourceNameSingular}}Client.Migrate(sqlClient)
+	err = sqls.Migrate{{.CapsResourceNamePlural}}(sqlClient)
     if err != nil {
         return nil, err
     }
@@ -26,50 +26,100 @@ func New{{.CapsResourceNameSingular}}Dao() (*{{.CapsResourceNameSingular}}Dao, e
 	}, nil
 }
 
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
-	_, err := {{.SmallResourceNameSingular}}Client.Create({{.SmallResourceNameSingular}}Dao.sqlClient, {{.SmallResourceNameSingular}})
-	if err != nil {
-		return err
-	}
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+	insertQuery := "INSERT INTO {{.SmallResourceNamePlural}}({{.InsertQueryColumns}})values({{.InsertQueryParams}})"
+    res, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Exec(insertQuery, {{.InsertQueryExecColumns}})
+    if err != nil {
+        return nil, err
+    }
+    id, err := res.LastInsertId()
+    if err != nil {
+        return nil, err
+    }
+    m.Id = id
+
 	log.Debugf("{{.SmallResourceNameSingular}} created")
-	return nil
+    return &m, nil
 }
 
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id int64, {{.SmallResourceNameSingular}} models.{{.CapsResourceNameSingular}}) error {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id int64, {{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+    if id == 0 {
+        return nil, errors.New("invalid updated ID")
+    }
     if id != {{.SmallResourceNameSingular}}.Id {
-		return errors.New("id and payload don't match")
-	}
-	_, err := {{.SmallResourceNameSingular}}Client.Update({{.SmallResourceNameSingular}}Dao.sqlClient, id, {{.SmallResourceNameSingular}})
-	if err != nil {
-		return err
-	}
-	log.Debugf("{{.SmallResourceNameSingular}} updated")
-	return nil
+        return errors.New("id and payload don't match")
+    }
+    updateQuery := "UPDATE {{.SmallResourceNamePlural}} SET {{.UpdateQueryColumnsAndParams}} WHERE Id = ?"
+    res, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Exec(updateQuery, {{.UpdateQueryExecColumns}}, id)
+    if err != nil {
+        return nil, err
+    }
+    rowsAffected, err := res.RowsAffected()
+    if err != nil {
+        return nil, err
+    }
+    if rowsAffected == 0 {
+        return nil, sqls.ErrUpdateFailed
+    }
+
+    log.Debugf("{{.SmallResourceNameSingular}} updated")
+    return m, nil
 }
 
 func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Delete{{.CapsResourceNameSingular}}(id int64) error {
-    err := {{.SmallResourceNameSingular}}Client.Delete({{.SmallResourceNameSingular}}Dao.sqlClient, id)
-	if err != nil {
-		return err
-	}
-	log.Debugf("{{.SmallResourceNameSingular}} deleted")
-	return nil
+    deleteQuery := "DELETE FROM {{.SmallResourceNamePlural}} WHERE Id = ?"
+    res, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Exec(deleteQuery, id)
+    if err != nil {
+        return err
+    }
+    rowsAffected, err := res.RowsAffected()
+    if err != nil {
+        return err
+    }
+    if rowsAffected == 0 {
+        return sqls.ErrDeleteFailed
+    }
+
+    log.Debugf("{{.SmallResourceNameSingular}} deleted")
+    return nil
 }
 
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{{.CapsResourceNamePlural}}() ([]models.{{.CapsResourceNameSingular}}, error) {
-    {{.SmallResourceNamePlural}}, err := {{.SmallResourceNameSingular}}Client.All({{.SmallResourceNameSingular}}Dao.sqlClient)
-	if err != nil {
-		return {{.SmallResourceNamePlural}}, err
-	}
-	log.Debugf("{{.SmallResourceNameSingular}} listed")
-	return {{.SmallResourceNamePlural}}, nil
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{{.CapsResourceNamePlural}}() ([]*models.{{.CapsResourceNameSingular}}, error) {
+    selectQuery := "SELECT * FROM {{.SmallResourceNamePlural}}"
+    rows, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Query(selectQuery)
+    if err != nil {
+        return nil, err
+    }
+    defer func(rows *sql.Rows) {
+        _ = rows.Close()
+    }(rows)
+    var {{.SmallResourceNamePlural}} []models.{{.CapsResourceNameSingular}}
+    for rows.Next() {
+        var m models.{{.CapsResourceNameSingular}}
+        if err := rows.Scan(&m.Id, {{.GetQueryExecColumns}}); err != nil {
+            return nil, err
+        }
+        {{.SmallResourceNamePlural}} = append({{.SmallResourceNamePlural}}, m)
+    }
+    if {{.SmallResourceNamePlural}} == nil {
+        {{.SmallResourceNamePlural}} = []models.{{.CapsResourceNameSingular}}{}
+    }
+
+    log.Debugf("{{.SmallResourceNameSingular}} listed")
+    return {{.SmallResourceNamePlural}}, nil
 }
 
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id int64) (models.{{.CapsResourceNameSingular}}, error) {
-	{{.SmallResourceNameSingular}}, err := {{.SmallResourceNameSingular}}Client.Get({{.SmallResourceNameSingular}}Dao.sqlClient, id)
-	if err != nil {
-		return models.{{.CapsResourceNameSingular}}{}, err
-	}
-	log.Debugf("{{.SmallResourceNameSingular}} retrieved")
-	return *{{.SmallResourceNameSingular}}, nil
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Get{{.CapsResourceNameSingular}}(id int64) (*models.{{.CapsResourceNameSingular}}, error) {
+    selectQuery := "SELECT * FROM {{.SmallResourceNamePlural}} WHERE Id = ?"
+    row := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.QueryRow(selectQuery, id)
+    var m models.{{.CapsResourceNameSingular}}
+    if err := row.Scan(&m.Id, {{.GetQueryExecColumns}}); err != nil {
+        if errors.Is(err, sql.ErrNoRows) {
+            return nil, sqls.ErrNotExists
+        }
+        return nil, err
+    }
+
+    log.Debugf("{{.SmallResourceNameSingular}} retrieved")
+    return &m, nil
 }
