--- a/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/daos/sqlite-dao.go.tmpl
@@ -1,9 +1,9 @@
 package daos
 
 import (
+	"database/sql"
 	"errors"
     "github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/sqls"
-    {{.SmallResourceNameSingular}}Client "github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/daos/clients/sqls/{{.SmallKebabCaseResourceNameSingular}}-client"
 	"github.com/{{.UserName}}/{{.RepositoryName}}/{{.NodeName}}/pkg/rest/server/models"
     log "github.com/sirupsen/logrus"
 )
@@ -12,12 +12,26 @@ type {{.CapsResourceNameSingular}}Dao struct {
 	sqlClient *sqls.SQLiteClient
 }
 
+func migrate{{.CapsResourceNamePlural}}(r *sqls.SQLiteClient) error {
+	query := `
+	CREATE TABLE IF NOT EXISTS {{.SmallResourceNamePlural}}(
+		Id INTEGER PRIMARY KEY AUTOINCREMENT,
+        {{range $k, $v := $.CreateQueryColumns}}
+        {{$k}} {{$v}} NOT NULL,
+        {{end}}
+        CONSTRAINT id_unique_key UNIQUE (Id)
+	)
+	`
+	_, err1 := r.DB.Exec(query)
+	return err1
+}
+
 func New{{.CapsResourceNameSingular}}Dao() (*{{.CapsResourceNameSingular}}Dao, error) {
 	sqlClient, err := sqls.InitSqliteDB()
 	if err != nil {
 		return nil, err
 	}
-	err = sqls.Migrate{{.CapsResourceNamePlural}}(sqlClient)
+	err = migrate{{.CapsResourceNamePlural}}(sqlClient)
     if err != nil {
         return nil, err
     }
@@ -26,7 +40,7 @@ func New{{.CapsResourceNameSingular}}Dao() (*{{.CapsResourceNameSingular}}Dao, e
 	}, nil
 }
 
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Create{{.CapsResourceNameSingular}}({{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Create{{.CapsResourceNameSingular}}(m *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
 	insertQuery := "INSERT INTO {{.SmallResourceNamePlural}}({{.InsertQueryColumns}})values({{.InsertQueryParams}})"
     res, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Exec(insertQuery, {{.InsertQueryExecColumns}})
     if err != nil {
@@ -39,15 +53,15 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Creat
     m.Id = id
 
 	log.Debugf("{{.SmallResourceNameSingular}} created")
-    return &m, nil
+    return m, nil
 }
 
-func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id int64, {{.SmallResourceNameSingular}} *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
+func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) Update{{.CapsResourceNameSingular}}(id int64, m *models.{{.CapsResourceNameSingular}}) (*models.{{.CapsResourceNameSingular}}, error) {
     if id == 0 {
         return nil, errors.New("invalid updated ID")
     }
-    if id != {{.SmallResourceNameSingular}}.Id {
-        return errors.New("id and payload don't match")
+    if id != m.Id {
+        return nil, errors.New("id and payload don't match")
     }
     updateQuery := "UPDATE {{.SmallResourceNamePlural}} SET {{.UpdateQueryColumnsAndParams}} WHERE Id = ?"
     res, err := {{.SmallResourceNameSingular}}Dao.sqlClient.DB.Exec(updateQuery, {{.UpdateQueryExecColumns}}, id)
@@ -93,16 +107,16 @@ func ({{.SmallResourceNameSingular}}Dao *{{.CapsResourceNameSingular}}Dao) List{
     defer func(rows *sql.Rows) {
         _ = rows.Close()
     }(rows)
-    var {{.SmallResourceNamePlural}} []models.{{.CapsResourceNameSingular}}
+    var {{.SmallResourceNamePlural}} []*models.{{.CapsResourceNameSingular}}
     for rows.Next() {
         var m models.{{.CapsResourceNameSingular}}
         if err := rows.Scan(&m.Id, {{.GetQueryExecColumns}}); err != nil {
             return nil, err
         }
-        {{.SmallResourceNamePlural}} = append({{.SmallResourceNamePlural}}, m)
+        {{.SmallResourceNamePlural}} = append({{.SmallResourceNamePlural}}, &m)
     }
     if {{.SmallResourceNamePlural}} == nil {
-        {{.SmallResourceNamePlural}} = []models.{{.CapsResourceNameSingular}}{}
+        {{.SmallResourceNamePlural}} = []*models.{{.CapsResourceNameSingular}}{}
     }
 
     log.Debugf("{{.SmallResourceNameSingular}} listed")
