--- a/frameworks/go-gin-server/pkg/rest/server/models/model.go.tmpl
+++ b/frameworks/go-gin-server/pkg/rest/server/models/model.go.tmpl
@@ -1,11 +1,11 @@
 package models
 
 type {{.CapsResourceNameSingular}} struct {
-    Id int64
+    Id int64 `json:"id,omitempty"`
 {{range $k, $v := .Fields}}
     {{if eq $k "Id"}}
     {{else}}
-    {{$k}} {{$v}} `json:"omitempty"`
+    {{$k}} {{$v}} `json:"{{toLowerCase $k}},omitempty"`
     {{end}}
 {{end}}
 }
